Updated colors and made small text changes

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@ href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;7
 &display=swap" rel="stylesheet" />
 <style>
 :root {
---maelee-blue: #00a4ff;
+--maelee-blue: #33b6ff;
 --maelee-dark: #111111;
---maelee-gray: #f4f5f7;
---maelee-light-gray: #d2d4da;
+--maelee-off-white: #f4f5f7;
+--maelee-light-gray: #a6a6a6;
 --maelee-white: #ffffff;
 }
 
@@ -25,7 +25,7 @@ padding: 0;
 body {
 font-family: "Montserrat", Arial, sans-serif;
 color: var(--maelee-dark);
-background: var(--maelee-gray);
+background: var(--maelee-off-white);
 
 line-height: 1.6;
 }
@@ -234,7 +234,7 @@ color: #b7bcc7;
 /* Sections */
 
 main {
-background: var(--maelee-gray);
+background: var(--maelee-off-white);
 }
 
 section {
@@ -727,7 +727,7 @@ Management LLC" />
 <div class="founder-text">
 <h3>Anthony Mayo</h3>
 
-<div class="founder-role">Founder &amp; Owner, Maelee Management
+<div class="founder-role">Founder & Owner, Maelee Management
 LLC</div>
 <p>
 Anthony Mayo established Maelee Management LLC after a career in
@@ -770,9 +770,9 @@ conversation. There’s no obligation—just a chance to explore whether our app
 the right fit for you and your family.
 </p>
 <div class="contact-detail">
-<p><strong>Email</strong> info@maeleemanagement.com</p>
+<p><strong>Email</strong> info@maeleemgmt.com</p>
 <p><strong>Phone</strong> (555) 555-5555</p>
-<p><strong>Location</strong> New York &amp; virtual client meetings</p>
+<p><strong>Location</strong> New York & virtual client meetings</p>
 </div>
 </div>
 
