Added disclaimer in the footer and updated contact information

--- a/src/index.html
+++ b/src/index.html
@@ -482,7 +482,7 @@ outline-offset: 1px;
 
 footer {
 background: var(--maelee-dark);
-color: #b9bcc7;
+color: var(--maelee-light-gray);
 padding: 1.5rem;
 font-size: 0.8rem;
 }
@@ -499,6 +499,18 @@ align-items: center;
 
 .footer-inner span {
 opacity: 0.9;
+}
+
+.footer-disclaimer {
+  max-width: 1100px;
+  margin: 2% auto;
+  color: var(--maelee-light-gray);
+  font-size: 0.65rem;
+
+  .disclaimer {
+    font-size: 0.85rem;
+    font-weight: 600;
+  }
 }
 
 @media (max-width: 900px) {
@@ -771,8 +783,8 @@ conversation. There’s no obligation—just a chance to explore whether our app
 the right fit for you and your family.
 </p>
 <div class="contact-detail">
-<p><strong>Email</strong> info@maeleemgmt.com</p>
-<p><strong>Phone</strong> (555) 555-5555</p>
+<p><strong>Email</strong> mayoaajj@gmail.com</p>
+<p><strong>Phone</strong> (551) 226-9734</p>
 <p><strong>Location</strong> New York & virtual client meetings</p>
 </div>
 </div>
@@ -807,6 +819,16 @@ timeline..."></textarea>
 </main>
 
 <footer>
+  <div class="footer-disclaimer">
+    <span class="disclaimer">
+      Disclaimer
+    </span>
+    <br>The information contained on this website is solely for educational purposes, and does not constitute investment advice. The risk of trading in securities markets can be substantial. You must review and agree to our Disclaimers and Terms and Conditions before using this site.
+    <br>U.S. Government Required Disclaimer - Commodity Futures Trading Commission. Futures and options trading has large potential rewards, but also large potential risk. You must be aware of the risks and be willing to accept them in order to invest in the futures and options markets. Don't trade with money you can't afford to lose. This website is neither a solicitation nor an offer to Buy/Sell futures or options. No representation is being made that any account will or is likely to achieve profits or losses similar to those discussed on this website. The past performance of any trading system or methodology is not necessarily indicative of future results.
+    <br>Individual results may vary, and testimonials are not claimed to represent typical results. All testimonials are by real people, and may not reflect the typical purchaser's experience, and are not intended to represent or guarantee that anyone will achieve the same or similar results.
+    <br>JTNCgroup Trader's and employees will NEVER manage or offer to manage a customer or individual's options, stocks, currencies, futures, or any financial markets or securities account. If someone claiming to represent or be associated with JTNCgroup solicits you for money or offers to manage your trading account, do not provide any personal information and contact us immediately.
+    <br>CFTC RULE 4.41 - HYPOTHETICAL OR SIMULATED PERFORMANCE RESULTS HAVE CERTAIN LIMITATIONS. UNLIKE AN ACTUAL PERFORMANCE RECORD, SIMULATED RESULTS DO NOT REPRESENT ACTUAL TRADING. ALSO, SINCE THE TRADES HAVE NOT BEEN EXECUTED, THE RESULTS MAY HAVE UNDER-OR-OVER COMPENSATED FOR THE IMPACT, IF ANY, OF CERTAIN MARKET FACTORS, SUCH AS LACK OF LIQUIDITY, SIMULATED TRADING PROGRAMS IN GENERAL ARE ALSO SUBJECT TO THE FACT THAT THEY ARE DESIGNED WITH THE BENEFIT OF HINDSIGHT. NO REPRESENTATION IS BEING MADE THAT ANY ACCOUNT WILL OR IS LIKELY TO ACHIEVE PROFIT OR LOSSES SIMILAR TO THOSE SHOWN.
+  </div>
 <div class="footer-inner">
 <span>© <span id="year"></span> Maelee Management LLC. All rights
 reserved.</span>
